2008-11-03  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-handler.c (std_handler_help): Make I unsigned to silence
	gcc -W warning.
	* assuan-logging.c (_assuan_log_print_buffer): Likewise for N.
	* funopen.c (_assuan_funopen): Remove initializer to silence gcc
	-W warning.
	* assuan-handler.c (std_cmd_table): Add missing initializer to
	silence gcc -W warning.
	* assuan-socket-server.c (io): Likewise.
	* assuan-socket-connect.c (assuan_socket_connect_ext): Likewise.

2008-10-29  Marcus Brinkmann  <marcus@g10code.de>

	* assuan.h (assuan_error_t) (_ASSUAN_ONLY_GPG_ERRORS): Make
	unsigned int.
	(assuan_transact): Change return type of callback handlers to
	assuan_error_t.

2008-10-15  Werner Koch  <wk@g10code.com>

	* assuan-logging.c (_assuan_log_printf): Flush if the format
	string ends with a LF.

2008-09-01  Werner Koch  <wk@g10code.com>

	* assuan-io.c: Include time.h.  Fixes bug#951.
	(_assuan_usleep): Use nanosleep only is available.

2008-03-25  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (assuan_inquire): Loop over _assuan_read_line
	for EAGAIN.

2008-03-21  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (_assuan_usleep): New prototype.
	* assuan-io.c (_assuan_usleep): New function.
	* assuan-io-pth.c (_assuan_usleep): New function.
	* mkerrors: Do not incude <windows.h>, but assuan-defs.h.
	(_assuan_error_is_eagain): Call _assuan_usleep.

	* mkerrors [HAVE_W32_SYSTEM]: Include <windows.h>
	(_assuan_error_is_eagain) [HAVE_W32_SYSTEM]: Wait the tenth of a
	second.

2007-11-23  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (_assuan_inquire_ext_cb): Pass through return
	value from callback function.
	Suggested by Ben Kibbey <bjk@luxsci.net>.

2007-11-14  Werner Koch  <wk@g10code.com>

	* assuan-pipe-connect.c (pipe_connect_unix): Add dummy arg FLAGS.
	(pipe_connect_w32): Add arg FLAGS and start process detached if
	requested.  Changed callers to pass 0.
	(assuan_pipe_connect_ext): Pass FLAG.
