@@ -2,7 +2,8 @@ Package: libassuan
 Maintainer: Werner Koch <wk@gnupg.org>
 Bug reports: gnupg-devel@gnupg.org
 Security related bug reports: security@gnupg.org
-License: LGPLv2.1+
+License (library): LGPLv2.1+
+License (manual): GPLv3+
 
 
 Werner Koch  <wk@gnupg.org>
