@@ -1,3 +1,8 @@
+2009-02-24  Werner Koch  <wk@g10code.com>
+
+	* assuan-buffer.c (assuan_send_data): Add hack to optionally send
+	a final "CAN".
+
 2008-11-03  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan-handler.c (std_handler_help): Make I unsigned to silence
